--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart-material-ui": "^3.0.2",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
@@ -12,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.9",
     "bootstrap": "^5.1.3",
+    "devextreme": "21.2.6",
+    "devextreme-react": "21.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
