--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@devexpress/dx-react-chart-material-ui": "^3.0.2",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "devextreme": "21.2.6",
     "devextreme-react": "21.2.6",
+    "firebase": "^9.6.11",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
