--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "patient-monitoring-frontend",
+  "name": "fer2022-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
